--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,21 +1,8 @@
-html,
-body {
-	height: 100%;
-}
-
-body {
-	-ms-flex-align: center;
-	align-items: center;
-	padding-top: 40px;
-	padding-bottom: 40px;
-	background-color: #f5f5f5;
-}
-
 .login-form {
 	width: 100%;
 	max-width: 330px;
 	padding: 15px;
-	margin: auto;
+	margin: 40px auto;
 }
 
 .login-form img {
