Fixed icon hopping

--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,8 @@
 .main-nav-link-inactive {
 	color: #657786 !important;
 
-	transition: color 300ms, border-bottom 300ms;
-	-webkit-transition: color 300ms, border-bottom 300ms;
+	transition: color 300ms, border-bottom-color 300ms;
+	-webkit-transition: color 300ms, border-bottom-color 300ms;
 }
 
 .main-nav-link-inactive,
@@ -13,16 +13,14 @@
 .main-nav-link-active,
 .main-nav-link-inactive:hover {
 	color: #007bff !important;
-	border-bottom: #007bff 5px solid;
-	padding-bottom: 12px;
-	margin-bottom: -10px;
+	border-bottom-color: #007bff !important;
 }
 
 .main-nav-link-inactive-big {
 	color: #657786 !important;
 
-	transition: color 300ms, border-bottom 300ms;
-	-webkit-transition: color 300ms, border-bottom 300ms;
+	transition: color 300ms, border-bottom-color 300ms;
+	-webkit-transition: color 300ms, border-bottom-color 300ms;
 }
 
 .main-nav-link-inactive-big,
@@ -34,7 +32,14 @@
 .main-nav-link-active-big,
 .main-nav-link-inactive-big:hover {
 	color: #007bff !important;
-	border-bottom: #007bff 5px solid;
-	padding-bottom: 12px;
+	border-bottom-color: #007bff !important;
+}
+
+.main-nav-link-active-big,
+.main-nav-link-inactive-big,
+.main-nav-link-active,
+.main-nav-link-inactive {
 	margin-bottom: -10px;
+	padding-bottom: 12px;
+	border-bottom: 5px solid transparent;
 }
